--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,104 @@
 body {
+  font-family: "Martel Sans", sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* --- LANDIGN PAGE --- */
+.landingBox {
+  position: relative;
+  overflow: hidden;
+  color: white;
+}
+.landingBox .landingForeground {
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  position: absolute;
+}
+.landingBox .landingBackground {
+  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(5, 5, 5, 0.7)),
+    url(./images/56711-O8P8GQ-518.jpg);
+  filter: blur(2px);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  height: 100vh;
+  transform: scale(1.2);
+}
+
+/* --- HOME --- */
+.homeBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0.5rem;
+}
+.homeBox .logo {
+  width: 100%;
+  height: auto;
+  padding: 0.5rem 0;
+}
+.homeBox .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.7);
+}
+.homeBox .icon {
+  font-size: 4rem;
+  text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.7);
+  padding: 1rem;
+}
+.homeBox .title {
+  margin: 1.5rem 0;
+  text-align: center;
+}
+.homeBox .text {
+  padding: 0 0.5rem;
+  margin: 0.2rem 0;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* --- MENU --- */
+.menuBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0.5rem;
+}
+.menuBox .icon {
+  font-size: 3rem;
+}
+.menuBox .userIcon {
+  align-self: center;
+}
+.menuBox svg {
+  font-size: 3rem;
+}
+
+/* --- FOOTER --- */
+.footerBox {
+  font-size: 2rem;
+  text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0);
 }
