--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,7 +66,6 @@ a {
   z-index: 2;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   position: absolute;
   height: 100vh;
 }
@@ -351,7 +350,7 @@ a {
 .activityBox .sliderRoot {
   margin: 0.4rem 0.1rem;
   background-color: rgba(255, 51, 0, 0.2);
-  height: fit-content;
+  height: 82vh;
   overflow: scroll;
 }
 .activityBox .expansionBox {
@@ -498,4 +497,16 @@ a {
 }
 .registerBox a {
   color: #333;
+}
+
+/* ----  ----  ---- FEW MEDIA QUERIES FOR LANDSCAPE MODE ----  ----  ----*/
+
+@media all and (orientation: landscape) {
+  .homeBox {
+    flex-direction: row;
+    padding: 0 0.5rem 0.5rem;
+  }
+  .homeBox .logo {
+    width: 30%;
+  }
 }
